LIVIJUKU-258 Headerin uudelleensuunnittelu ja toteutus Tyylittelyä ja muiden komponenttien refaktorointia

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -1,3 +1,5 @@
 @import './loading-bar.css'
 @import '../scripts/components/header'
 @import '../scripts/components/sidebar'
+@import '../scripts/components/footer'
+@import '../scripts/components/navbar'
