--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -1,5 +1,6 @@
 <div class="header navbar navbar-fixed-top" role="navigation">
   <div class="container">
+    <img src="images/JUKU-logo.png" class="logo" />
 
     <!-- Mobiilinavigaatio -->
     <div class="navbar-header">
@@ -12,6 +13,8 @@
 
     <div class="header__content" ng-class="{'is-visible': !$root.isCollapsed}">
       <ul class="nav navbar-nav">
+
+
         <li ng-show="sallittu(user, 'view-hakemuskausi')" ng-class="{'is-active': isActive('/k/hakemuskaudenhallinta')}">
           <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta">
             Hakemuskaudet
