--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -149,9 +149,9 @@
       <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
     </div>
     <div class="col-md-6">
-      <h5>Allekirjoittaja</h5>
-
-      <p>_kirjautuneen allekirjoittajan nimi_</p>
+      <h5 ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">Viimeisin muokkaaja</h5>
+      <h5 ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">Hakija</h5>
+      <p>{{hakemus.hakija}}</p>
     </div>
   </div>
   <div class="row">
