--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -29,6 +29,8 @@
       <p>
         <a href="api/hakemus/{{hakemusid}}/paatos/1/pdf" target="_blank"><span class="glyphicon glyphicon-file"></span>
           Avaa päätös (PDF)</a>
+        <a href="resources/OIKAISUVAATIMUSOSOITUS.docx" target="_blank"><span
+          class="glyphicon glyphicon-file"></span> Avaa oikaisuvaatimusosoitus (DOCX)</a>
       </p>
     </div>
   </div>
@@ -151,6 +153,7 @@
     <div class="col-md-6">
       <h5 ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">Viimeisin muokkaaja</h5>
       <h5 ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">Hakija</h5>
+
       <p>{{hakemus.hakija}}</p>
     </div>
   </div>
