--- a/app/views/kasittelija/paatos.html
+++ b/app/views/kasittelija/paatos.html
@@ -135,7 +135,9 @@
       <div class="col-md-6"></div>
       <div class="col-md-6">
         <div ng-show="(avustushakemus.hakemustilatunnus == 'T' && sallittu('hyvaksy-paatos'))">
-          <button data-ng-click="hyvaksyPaatos(paatosForm)" class="pull-right btn btn-success">Tallenna ja hyväksy päätös</button>
+          <button varmistusdialogi varmistusotsake="Päätöksen hyväksyminen"
+                  varmistusteksti="Oletko varma, että haluat hyväksyä päätöksen? Päätöksen hyväksymistä ei ole mahdollista peruuttaa ja päätöstä ei ole mahdollista muuttaa hyväksymisen jälkeen."
+                  operaatio="hyvaksyPaatos(paatosForm)" class="pull-right btn btn-success">Tallenna ja hyväksy päätös</button>
         </div>
         <div ng-hide="(avustushakemus.hakemustilatunnus == 'T') && sallittu('hyvaksy-paatos')">
           <button data-ng-click="hyvaksyPaatos(paatosForm)" class="pull-right btn btn-success" disabled>Tallenna ja hyväksy päätös
