LIVIJUKU-248 Varmistusdialogit tilamuutosten yhteyteen
Muutettu direktiivistä Rikun komponentti-muotoon

--- a/app/views/kasittelija/paatos.html
+++ b/app/views/kasittelija/paatos.html
@@ -135,7 +135,7 @@
       <div class="col-md-6"></div>
       <div class="col-md-6">
         <div ng-show="(avustushakemus.hakemustilatunnus == 'T' && sallittu('hyvaksy-paatos'))">
-          <button varmistusdialogi varmistusotsake="Päätöksen hyväksyminen"
+          <button juku-varmistusdialogi varmistusotsake="Päätöksen hyväksyminen"
                   varmistusteksti="Oletko varma, että haluat hyväksyä päätöksen? Päätöksen hyväksymistä ei ole mahdollista peruuttaa ja päätöstä ei ole mahdollista muuttaa hyväksymisen jälkeen."
                   operaatio="hyvaksyPaatos(paatosForm)" class="pull-right btn btn-success">Tallenna ja hyväksy päätös</button>
         </div>
