--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -3,3 +3,4 @@
 @import '../scripts/components/sidebar'
 @import '../scripts/components/footer'
 @import '../scripts/components/navbar'
+@import '../scripts/components/varmistusdialogi'
