Readonly kenttien tyylittelymuutos

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -16,6 +16,12 @@ fieldset[disabled] .form-control
   background-color: #fff
   opacity: 1
   border-color: #fff
+  box-shadow: none
+
+  & ~ .input-group-btn
+    button
+      margin-left: 2px
+      border-radius: 3px
 
 html
   position: relative
