LIVIJUKU-242 Varmistusdialogi, kun ollaan navigoimassa pois lomakkeelta, jossa tallentamattomia tietoja

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -4,3 +4,4 @@
 @import '../scripts/components/footer'
 @import '../scripts/components/navbar'
 @import '../scripts/components/varmistusdialogi'
+@import '../scripts/components/poistumisvaroitus'
