--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <form name="hakemusForm">
+    <form name="hakemusForm" juku-poistumisvaroitus="">
       <div class="row">
         <div class="col-md-12">
           <h3 ng-switch on="tyyppi">
