--- a/app/scripts/components/header/index.styl
+++ b/app/scripts/components/header/index.styl
@@ -3,14 +3,17 @@
   a
     color: #fff
 
+.navbar-nav
+  font-weight: bold
+
 .navbar-nav .is-active
   background-color: #ffffff
   border-radius: 6px 6px 0px 0px
   top: 8px
   height: 45px
-  font-weight: bold
   a
-    color: #777
+    padding-top 0.5em
+    color: colors.text
 
 .header li .dropdown-menu
   margin-top: 0.25em
@@ -49,6 +52,7 @@
 
 .header
   .navbar__user
+    font-weight normal
     .navbar__user__name + .navbar__user__org
       font-size 0.8em
       color #eee
