LIVIJUKU-258 Headerin uudelleensuunnittelu ja toteutus Tabipalkin luominen ja sen korjaaminen hakemus-tilassa

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -5,3 +5,4 @@
 @import '../scripts/components/navbar'
 @import '../scripts/components/varmistusdialogi'
 @import '../scripts/components/poistumisvaroitus'
+@import '../scripts/components/navigation'
