LIVIJUKU-282 Hakemustilan näyttäminen hakemusnäytöllä. Hakemuksen hakijan, tilan ja tilasliderin lisääminen hakemus-näkymään

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -6,3 +6,5 @@
 @import '../scripts/components/varmistusdialogi'
 @import '../scripts/components/poistumisvaroitus'
 @import '../scripts/components/navigation'
+@import '../scripts/components/hakemusLabel'
+@import '../scripts/components/hakemuksenTila'
