--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -6,8 +6,10 @@
 h3
   font-size: 18px
   margin-bottom: 20px
-  border-bottom: 1px solid #dddddd
   padding-top: 20px
+  border-bottom: 1px solid #dddddd
+  padding-bottom: 5px
+  font-weight: 400
 
 .form-control[disabled],
 .form-control[readonly],
