--- a/app/views/yhteinen/jkuAvustuskohde.html
+++ b/app/views/yhteinen/jkuAvustuskohde.html
@@ -4,31 +4,43 @@
       <h5>{{name}}</h5>
     </div>
     <div ng-show="hakemustyyppi=='AH0' || (tyyppi!='AH0' && vertailuarvot().avustushakemusHaettavaAvustus>0)">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="form-group" show-errors="{showSuccess: true}">
           <label>Haettava valtionavustus
-            <input name="{{getName('haettavaavustus')}}" type="text" ng-currency="" noenter select-on-click
-                   ng-readonly="isReadonly()" class="form-control" tooltip-html-unsafe="{{haeTooltip('haettavaavustus')}}"
-                   tooltip-trigger="focus"
-                   tooltip-placement="top"
-                   ng-model="kohde.haettavaavustus"
-                   ui-validate="{sallittuArvoHaettavaavustus: 'sallittuArvo($value)'}"/>
+            <div class="input-group">
+              <input name="{{getName('haettavaavustus')}}" type="text" ng-currency="" noenter select-on-click
+                     alvmuunnos="{prosentti: {{kohde.alv}}, alvmukana: {{alv}}}"
+                     ng-readonly="isReadonly()" class="form-control"
+                     tooltip-html-unsafe="{{haeTooltip('haettavaavustus')}}"
+                     tooltip-trigger="focus"
+                     tooltip-placement="top"
+                     ng-model="kohde.haettavaavustus"
+                     ui-validate="{sallittuArvoHaettavaavustus: 'sallittuArvo(kohde.haettavaavustus)'}"/>
+              <span ng-show="alv" class="input-group-addon">alv {{kohde.alv}} %</span>
+              <span ng-hide="alv" class="input-group-addon">alv 0 %</span>
+            </div>
           </label>
+
 
           <p class="help-block ng-invalid-sallittu-arvo-haettavaavustus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
 
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="form-group" show-errors="{showSuccess: true}">
           <label>Kunnan oma rahoitusosuus
-            <input name="{{getName('omarahoitus')}}" type="text" ng-currency="" noenter select-on-click
-                   class="form-control" tooltip-html-unsafe="{{haeTooltip('omarahoitus')}}"
-                   tooltip-trigger="focus"
-                   tooltip-placement="top"
-                   ng-readonly="isReadonly()" ng-model="kohde.omarahoitus"
-                   ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,kohde.haettavaavustus)',sallittuArvoOmarahoitus: 'sallittuArvo($value)'}"
-                   ui-validate-watch=" 'kohde.haettavaavustus' "/>
+            <div class="input-group">
+              <input name="{{getName('omarahoitus')}}" type="text" ng-currency="" noenter select-on-click
+                     alvmuunnos="{prosentti: {{kohde.alv}}, alvmukana: {{alv}}}"
+                     class="form-control" tooltip-html-unsafe="{{haeTooltip('omarahoitus')}}"
+                     tooltip-trigger="focus"
+                     tooltip-placement="top"
+                     ng-readonly="isReadonly()" ng-model="kohde.omarahoitus"
+                     ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava(kohde.omarahoitus,kohde.haettavaavustus)',sallittuArvoOmarahoitus: 'sallittuArvo(kohde.omarahoitus)'}"
+                     ui-validate-watch=" 'kohde.haettavaavustus' "/>
+              <span ng-show="alv" class="input-group-addon">alv {{kohde.alv}} %</span>
+              <span ng-hide="alv" class="input-group-addon">alv 0 %</span>
+            </div>
           </label>
 
           <p class="help-block ng-invalid-sallittu-arvo-omarahoitus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
@@ -37,6 +49,12 @@
             {{100-avustusprosentti}}% kokonaiskuluista.</p>
 
         </div>
+      </div>
+      <div class="col-md-4">
+        <p>Yhteensä</p>
+
+        <p ng-show="alv">{{(kohde.haettavaavustus + kohde.omarahoitus) | currency:"&euro;"}} alv {{kohde.alv}} %</p>
+        <p ng-hide="alv">{{((kohde.haettavaavustus + kohde.omarahoitus)/(1+(kohde.alv/100)))| currency:"&euro;"}} alv 0 %</p>
       </div>
     </div>
     <div ng-show="hakemustyyppi!='AH0' && vertailuarvot().avustushakemusHaettavaAvustus==0">
