--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -93,6 +93,20 @@
           </h3>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <label ng-show="hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0'">
+              <input type="checkbox" ng-model="alv">
+              Haluan syöttää summat arvonlisäverollisina.
+            </label>
+            <label ng-hide="hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0'">
+              <input type="checkbox" ng-model="alv">
+              Haluan katsoa arvoja arvonlisäverollisina.
+            </label>
+          </div>
+        </div>
+      </div>
 
       <jku-avustusluokka-panel luokka="avustuskohdeluokka"
                                name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}"
@@ -100,7 +114,7 @@
                                ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
         <jku-avustuskohde vuosi="vuosi"
                           vertailuarvot="haeVertailuarvot(avustuskohde.avustuskohdeluokkatunnus,avustuskohde.avustuskohdelajitunnus)"
-                          hakemustyyppi="tyyppi" kohde="avustuskohde"
+                          hakemustyyppi="tyyppi" kohde="avustuskohde" alv="alv"
                           hakemus="hakemus"
                           name="{{avustuskohdeLuokat[avustuskohde.avustuskohdeluokkatunnus].avustuskohdelajit[avustuskohde.avustuskohdelajitunnus].nimi}}"
                           ng-repeat="avustuskohde in avustuskohdeluokka.avustuskohteet">
@@ -112,7 +126,7 @@
         </div>
         <div class="col-md-3">
           <div class="pull-right">
-            <h4>{{sumHaettavaAvustus() | currency:"&euro;"}}</h4>
+            <h4>{{sumHaettavaAvustus() | currency:"&euro;"}} (sis. alv)</h4>
           </div>
         </div>
       </div>
