--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -64,13 +64,23 @@
   </div>
 
   <form name="hakemusForm">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <label>
+            <input type="checkbox" ng-model="alv">
+            Haluan katsoa arvoja arvonlisäverollisina.
+          </label>
+        </div>
+      </div>
+    </div>
 
     <jku-avustusluokka-panel luokka="avustuskohdeluokka" name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}"
                              hakemus="hakemus"
                              ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
       <jku-avustuskohde vuosi="vuosi"
                         vertailuarvot="haeVertailuarvot(avustuskohde.avustuskohdeluokkatunnus,avustuskohde.avustuskohdelajitunnus)"
-                        hakemustyyppi="tyyppi" kohde="avustuskohde"
+                        hakemustyyppi="tyyppi" kohde="avustuskohde" alv="alv"
                         hakemus="hakemus"
                         name="{{avustuskohdeLuokat[avustuskohde.avustuskohdeluokkatunnus].avustuskohdelajit[avustuskohde.avustuskohdelajitunnus].nimi}}"
                         ng-repeat="avustuskohde in avustuskohdeluokka.avustuskohteet">
