--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -1,6 +1,6 @@
 <div class="header navbar navbar-fixed-top" role="navigation">
   <div class="container">
-    <img src="images/JUKU-logo.png" class="logo" />
+    <img src="images/juku_logo.svg" class="logo" />
 
     <!-- Mobiilinavigaatio -->
     <div class="navbar-header">
