LIVIJUKU-299 Päivitä JUKUn logo headerissä SVG-tiedostoksi (ks. liite)
Sama myös footer:iin

--- a/app/scripts/components/footer/index.html
+++ b/app/scripts/components/footer/index.html
@@ -1,6 +1,6 @@
 <div class="footer navbar">
   <div class="container">
-    <img src="images/JUKU-logo.png" class="logo">
+    <img src="images/juku_logo.svg" class="logo">
     <div class="col-xs-2">
       Yhteystiedot
     </div>
