--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -27,7 +27,7 @@
   <div class="row" ng-show="hasPaatos(tyyppi, hakemus.hakemustilatunnus)">
     <div class="col-md-12">
       <p>
-        <a href="api/hakemus/{{hakemusid}}/paatos/1/pdf" target="_blank"><span class="glyphicon glyphicon-file"></span>
+        <a href="api/hakemus/{{hakemusid}}/paatos/pdf" target="_blank"><span class="glyphicon glyphicon-file"></span>
           Avaa päätös (PDF)</a>
         <a href="resources/OIKAISUVAATIMUSOSOITUS.docx" target="_blank"><span
           class="glyphicon glyphicon-file"></span> Avaa oikaisuvaatimusosoitus (DOCX)</a>
